<resources>
    <string name="app_name">Instagram</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">Username</string>
    <string name="hint_timestamp">10m</string>
    <string name="hint_likes">13,241 likes</string>
    <string name="hint_caption">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
        has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type
        and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
        electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
        Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
        PageMaker including versions of Lorem Ipsum
    </string>
    <string name="err_cannotload">Could not load the feed at this moment.</string>
    <string name="err_no_internet">Please check your internet connectivity and try again</string>
    <string name="view_all_comments_hint">View all 125 comments</string>
    <string name="view_comments_text">View all %d comments</string>
    <string name="title_activity_comments">COMMENTS</string>
    <string name="cd_like">Like this post</string>
    <string name="cd_comment">Comment</string>
    <string name="cd_share">Share post</string>
    <string name="menu_share">Share Post</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_password">Password</string>
    <string name="bt_login">Login</string>
    <string name="title_activity_home">Home Feed</string>
    <string name="redirect_url">codepath.com</string>
    <string name="pb_loading">Loading....</string>
    <string name="search">Search Tags or Users</string>
    <string name="hint_posts">5,345 posts</string>
    <string name="hint_tag_result">#YOLO</string>
    <string name="tag_count_postfix">post</string>
    <string name="tag_count_postfix_plural">posts</string>
    <string name="title_activity_photos_grid">PhotosGridActivity</string>
    <string name="bt_send">Send</string>
    <string name="hint_add_comment">Add a Comment</string>
    <string name="cd_submit">Submit</string>
    <string name="str_comments">COMMENTS</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="label_posts">posts</string>
    <string name="hint_postcount">4141</string>
    <string name="label_follower">followers</string>
    <string name="label_following">following</string>
    <string name="noposts">No Posts Found</string>
    <string name="str_search">Search</string>
    <string name="user_private">This user is private.</string>
    <string name="posts_you_liked">Posts you\'ve Liked</string>
</resources>
