<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingBottom="24dp">

    <RelativeLayout
            android:id="@+id/llUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" >

        <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/sdvProfileImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                app:actualImageScaleType="fitCenter"
                app:placeholderImage="@drawable/gray_oval"
                app:roundAsCircle="true" />

        <TextView
                android:id="@+id/tvRelativeTimestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/light_gray_text"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:hint="@string/hint_timestamp"
                android:fontFamily="sans-serif"
                android:textSize="14sp" />

        <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/sdvProfileImage"
                android:layout_toEndOf="@id/sdvProfileImage"
                android:layout_toLeftOf="@id/tvRelativeTimestamp"
                android:layout_toStartOf="@id/tvRelativeTimestamp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/blue_text"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:hint="@string/hint_username"
                android:textSize="14sp" />
    </RelativeLayout>

    <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sdvPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/llUserInfo"
            app:actualImageScaleType="fitCenter"
            app:viewAspectRatio="1"
            app:placeholderImage="@drawable/gray_rectangle" />

    <LinearLayout
            android:id="@+id/llPhotoInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sdvPhoto"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tvLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_small_heart_filled"
                android:drawableStart="@drawable/ic_small_heart_filled"
                android:drawablePadding="5dp"
                android:textColor="@color/blue_text"
                android:ellipsize="end"
                android:maxLines="1"
                android:hint="@string/hint_likes"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp" />

        <TextView
                android:id="@+id/tvCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_text"
                android:fontFamily="sans-serif"
                android:layout_marginTop="4dp"
                android:lineSpacingMultiplier="1.2"
                android:hint="@string/hint_caption"
                android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>